chore: 대표이미지 저장

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       property="og:description"
       content="멈춘공간에 숨을 불어넣는다 - 일칸"
     />
-    <meta property="og:image" content="/VERO_OG.png" />
+    <meta property="og:image" content="/ILKAN.png" />
 
     <title>Vite + React + TS</title>
   </head>
